[package]
name = "codecache"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29"
ratatui = "0.29"
tui-widget-list = "0.13"
syntect = "5.3"
ansi-to-tui = "7.0"
tree-sitter = "0.25"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-html = "0.23"
tree-sitter-css = "0.25"
tree-sitter-c-sharp = "0.23"
tree-sitter-yaml = "0.7"
tree-sitter-json = "0.24"
tree-sitter-toml-ng = "0.7"
tree-sitter-bash = "0.25"
tree-sitter-md = "0.5"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"