[package]
name = "codecache"
description = "A terminal-based code snippet manager with syntax highlighting."
license = "GPL-3.0-only"
readme = "README.md"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29"
ratatui = "0.29"
tui-widget-list = "0.13"
syntect = "5.3"
ansi-to-tui = "7.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
arboard = { version = "3", features = ["wayland-data-control"] }
tui-dialog = "0.4"
tui-popup = "0.6"
dirs = "6.0"